syntax = "proto3";

package com.key_generator_service.grpc;

option java_multiple_files = true;
option java_package = "com.tinyurl_system_design.key_generator_service.grpc.lib";
option java_outer_classname = "KeyGeneratorProto";

// The greeting service definition.
service KeyGeneratorService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}


// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}